--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,35 +1,30 @@
-.class1 {
-  .class2 {
-    color: red;
-    width: 1000px;
-  }
+@import "index/header";
+@import "index/main-offer";
+@import "index/programs";
+@import "index/work";
+@import "index/example";
 
-  background: blanchedalmond;
-  transform: scale(1.5);
+* {
+  font-family: Oswald, sans-serif;
+  box-sizing: border-box;
 }
 
-.privet {
-  font-size: 30px;
-  color: blue;
+body {
+  min-width: 320px;
+  margin: 0;
 }
 
-.actions {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin: 24px;
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
-  &__group {
-    width: 400px;
-    background-color: #fafafa;
-  }
+li {
+  list-style: none;
+}
 
-  &__button {
-    background-color: aquamarine;
-    padding: 24px;
-
-    &--warning {
-      background-color: gold;
-    }
-  }
+ul,
+p {
+  padding: 0;
+  margin: 0;
 }
