--- a/src/styles/program.scss
+++ b/src/styles/program.scss
@@ -2,7 +2,5 @@
 @import "shared/components/header";
 @import "shared/components/map";
 @import "shared/components/footer";
-@import "index/main-offer";
-@import "index/programs";
-@import "index/work";
-@import "index/example";
+@import "shared/components/divider";
+@import "program/form";
