--- a/src/styles/catalog.scss
+++ b/src/styles/catalog.scss
@@ -2,7 +2,6 @@
 @import "shared/components/header";
 @import "shared/components/map";
 @import "shared/components/footer";
-@import "index/main-offer";
-@import "index/programs";
-@import "index/work";
-@import "index/example";
+@import "shared/components/divider";
+@import "catalog/assortment";
+@import "catalog/addition";
