--- a/src/styles/index/_example.scss
+++ b/src/styles/index/_example.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable property-no-vendor-prefix */
 @import "../shared/variables";
 
 .example {
@@ -60,7 +61,7 @@
     align-items: center;
 
     @media (min-width: $desktop-width) {
-      margin-right: 200px;
+      margin-right: 100px;
     }
   }
 
@@ -411,7 +412,7 @@
       -webkit-appearance: none;
       background-color: #68b738;
       box-shadow: 0 0 1px #cdcdcd;
-      filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.16));
+      filter: drop-shadow(0 1px 3px rgb(0 0 0 / 16%));
     }
   }
 
