--- a/src/styles/catalog/_assortment.scss
+++ b/src/styles/catalog/_assortment.scss
@@ -198,6 +198,7 @@
 
     margin-bottom: 14px;
     width: calc(100% - 40px);
+    transition: 0.3s;
 
     @media (min-width: $tablet-width) {
       margin: 33px 0 40px;
@@ -231,16 +232,22 @@
   }
 
   &__plus {
+    display: flex;
     margin-bottom: 23px;
 
     @media (min-width: $tablet-width) {
       margin-top: 52px;
-      margin-bottom: 49px;
-      width: 60px;
+      margin-bottom: 43px;
     }
 
     @media (min-width: $desktop-width) {
       margin-top: 0;
+    }
+  }
+
+  &__plus-img {
+    @media (min-width: $tablet-width) {
+      width: 60px;
     }
   }
 
@@ -287,6 +294,7 @@
     @include button(#f2f2f2, #ebebeb, #444, rgba(68 68 68 / 30%));
 
     width: calc(100% - 40px);
+    transition: 0.3s;
 
     @media (min-width: $tablet-width) {
       width: calc(100% - 78px);
