--- a/src/styles/catalog/_addition.scss
+++ b/src/styles/catalog/_addition.scss
@@ -188,6 +188,7 @@
     @include button;
 
     margin-bottom: 19px;
+    transition: 0.3s;
 
     @media (min-width: $tablet-width) {
       margin-bottom: 28px;
