--- a/src/styles/index/_main-offer.scss
+++ b/src/styles/index/_main-offer.scss
@@ -115,28 +115,35 @@
     }
   }
 
-  &__button {
-    @include button;
-
+  &__link {
     margin-top: 135px;
     max-width: 280px;
-    font-size: 14px;
-    line-height: 18px;
-    text-align: center;
 
     @media (min-width: $tablet-width) {
-      align-self: flex-start;
-      z-index: 10;
       width: 244px;
+      z-index: 10;
+      align-self: flex-start;
       margin-top: 49px;
       margin-left: 117px;
-      font-size: 20px;
-      line-height: 26px;
-      text-align: center;
     }
 
     @media (min-width: $desktop-width) {
       margin-left: 188px;
+    }
+  }
+
+  &__button {
+    @include button;
+
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    transition: 0.3s;
+
+    @media (min-width: $tablet-width) {
+      font-size: 20px;
+      line-height: 26px;
+      text-align: center;
     }
   }
 }
